# flaskbook

./: .gitignore  README.md
.github/workflows/: ci-for-flask-webapp.yaml
flask-webapp/: .gitignore  .lint.py  README.md  pyproject.toml
flask-webapp/flask_webapp/: __init__.py  app.py  config.py
flask-webapp/flask_webapp/auth/: forms.py  views.py
flask-webapp/flask_webapp/auth/templates/auth/: base.html  login.html  signup.html
flask-webapp/flask_webapp/crud/: forms.py  models.py  views.py
flask-webapp/flask_webapp/detector/: forms.py  models.py  views.py
flask-webapp/flask_webapp/detector/templates/detector/: 404.html  500.html  base.html  index.html  upload.html
flask-webapp/flask_webapp/minimal_app/: app.py
flask-webapp/flask_webapp/minimal_app/templates/: index.html
flask-webapp/flask_webapp/templates/: 404.html  500.html
flask-webapp/tests/: conftest.py  test_sample.py
flask-webapp/tests/detector/: test_views.py
